# rumoca

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: ci.yml
bindings/python/: pyproject.toml
crates/rumoca-bind-wasm/bindgen/: package.json  patch-wasm-pkg.mjs
crates/rumoca-bind-wasm/src/: lib.rs
crates/rumoca-phase-codegen/src/: codegen.rs  lib.rs
crates/rumoca-sim-diffsol/src/: lib.rs  prepare.rs
crates/rumoca/src/: compiler.rs  main.rs
crates/rumoca/tests/: standalone_template_regression.rs
editors/vscode/: README.md  package-lock.json  package.json
examples/templates/: javascript.jinja  standalone_html.jinja
examples/wasm_editor/: index.html
nix/: flake.nix
packaging/nix/: flake.nix
src/: modelica_grammar.rs  modelica_grammar_trait.rs  modelica_parser.rs
src/dae/: jinja.rs
templates/: standalone_html.jinja
tests/templates/: javascript.jinja
tools/: build-python.sh  build-vscode-ext.sh  release.sh  test.sh  wasm-test.sh
wasm/: Cargo.toml  README.md  package.json  patch-wasm-pkg.mjs
wasm/src/: wasm.rs
