[package]
name = "rumoca"
version = "0.6.0"
edition = "2024"
description = "Modelica translator written in RUST"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
chksum-md5 = "0.1.0"
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11"
git-version = "0.3.9"
indexmap = { version = "2.7.1", features = ["serde"] }
minijinja = "2.8.0"
parol_runtime = "4.0.1"
#parol_runtime = "3.0.0"
scnr2 = "0.3.3"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "1.0"

[features]
regen-parser = []
default = []

[build-dependencies]
# parol crate should only appear in the build-dependencies here, because it includes
# the "assert_cmd" which doesn't work with WASM builds. 
parol = "4.1.1"

# For faster builds.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
