[package]
name = "rumoca-wasm"
version = "0.6.1"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "WASM wrapper for Rumoca Modelica Translator"

[lib]
crate-type = ["cdylib", "rlib"]
name = "rumoca_wasm"
path = "src/wasm.rs"

[dependencies]
# Use the root crate. Adjust path if your workspace layout differs.
rumoca = { path = ".." }

# IMPORTANT: Enable the js feature for getrandom to work in WASM
getrandom = { version = "0.3.4", features = ["wasm_js"] }

# Web-friendly logger optional; we'll gate verbose prints via console_log.
wasm-bindgen = "0.2.105"

# Logging to console in WASM (optional but handy)
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.28"

# MD5 in wasm
md-5 = "0.10.6"
js-sys = "0.3.82"

# it looks like we currently don't need this anymore, as the new
# parol v4.0.1 runtime supports wasm out of the box.
#[patch.crates-io]
# we currently need this in order to make scnr browser compatible!
#scnr = { git = "file://./scnr", branch = "main" }
#scnr = { git = "https://github.com/yeus/scnr.git", branch = "main" }

[features]
default = []
wasm = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
